--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.14</version>
+        <version>2.7.15</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ar.com.itau</groupId>
@@ -15,7 +15,7 @@
     <description>Seed project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>2021.0.6</spring-cloud.version>
+        <spring-cloud.version>2021.0.8</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
@@ -101,7 +101,7 @@
             <dependency>
                 <groupId>org.keycloak.bom</groupId>
                 <artifactId>keycloak-adapter-bom</artifactId>
-                <version>21.0.2</version>
+                <version>22.0.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -190,6 +190,7 @@
                 <configuration>
                     <includeTests>true</includeTests>
                     <verbose>true</verbose>
+                    <linkXRef>false</linkXRef>
                     <rulesets>
                         <ruleset>src/test/resources/pmd/pmd-custom-rules.xml</ruleset>
                     </rulesets>
